[gd_scene load_steps=10 format=3 uid="uid://ds03shwkwkxoy"]

[ext_resource type="Texture2D" uid="uid://ct3f2c6vtqubg" path="res://Gambling Mechine/mechine.png" id="1_7udhp"]
[ext_resource type="Script" uid="uid://b88pyr1idv7m4" path="res://gambling_mechine.gd" id="1_33e5q"]

[sub_resource type="Animation" id="Animation_7dqb0"]
resource_name = "Coin Flip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.2, 0.36666667, 0.4, 0.56666666, 0.6, 0.76666665, 0.8, 0.96666664),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 5, 6, 6, 7, 7, 8, 8, 9, 9]
}

[sub_resource type="Animation" id="Animation_33e5q"]
resource_name = "Idle"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.2, 0.36666667, 0.4, 0.56666666, 0.6, 0.76666665),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 1, 2, 2, 3, 3, 0, 0]
}

[sub_resource type="Animation" id="Animation_fv66l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7dqb0"]
_data = {
&"Coin Flip": SubResource("Animation_7dqb0"),
&"Idle": SubResource("Animation_33e5q"),
&"RESET": SubResource("Animation_fv66l")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7udhp"]
size = Vector2(6, 8)

[sub_resource type="GDScript" id="GDScript_33e5q"]
script/source = "extends CanvasLayer

func _ready() -> void:
	hide()
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33e5q"]
size = Vector2(24, 24)

[node name="Gambling Mechine" type="Node2D"]
script = ExtResource("1_33e5q")

[node name="Sprite" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Sprite"]
scale = Vector2(1.4765214, 1.3580918)
texture = ExtResource("1_7udhp")
hframes = 5
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
&"": SubResource("AnimationLibrary_7dqb0")
}

[node name="Area2D" type="Area2D" parent="Sprite"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2(0, 21)
shape = SubResource("RectangleShape2D_7udhp")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
metadata/_edit_group_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="Menu"]
visible = false
script = SubResource("GDScript_33e5q")

[node name="MarginContainer" type="MarginContainer" parent="Menu/CanvasLayer"]
offset_left = -13.0
offset_top = -24.0
offset_right = 1140.0
offset_bottom = 624.0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 415
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 31
text = "ǤᕔᙏᗹԸꗛ?"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Menu/CanvasLayer/MarginContainer/VBoxContainer/Label"]
layout_mode = 0
offset_left = -9.0
offset_right = 168.0
offset_bottom = 44.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_33e5q")

[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="button_down" from="Menu/CanvasLayer/MarginContainer/VBoxContainer/Label/Button" to="." method="_on_button_button_down"]
